hot fix sai chinh ta

--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -19,7 +19,7 @@
       <div class="intro-incense-stick"></div>
       <div class="intro-incense-stick"></div>
     </div>
-    <button id="enterButton" class="intro-button">Xem Giả Phả</button>
+    <button id="enterButton" class="intro-button">Xem Gia Phả</button>
   </div>
 
   <!-- Khung từ đường với hoành phi và câu đối -->
