--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -389,7 +389,7 @@
             addMoreBtn: 'Thêm phần tử',
             addMore: 'Thêm nhiều phần tử hơn',
             addMoreFieldName: 'Tên phần tử',
-            generateElementsFromFields: false,
+            generateElementsFromFields: true,
             elements: [
               { type: 'textbox', label: 'Họ và Tên', binding: 'name' },
               { type: 'textbox', label: 'Vai trò', binding: 'role' },
@@ -501,7 +501,7 @@
         });
 
         family.onInit(() => {
-          family.collapse(11, [12,14,16,21,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,60,61,62,63,64,65]);
+          //family.collapse(11, [12,14,16,21,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,60,61,62,63,64,65]);
           family.center(17);
         });
 
