--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,7 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <!-- Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1024944386183959"
+     crossorigin="anonymous"></script>
 </head>
