--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -14,6 +14,22 @@
   <div id="introOverlay" class="intro-overlay">
     <h1 class="intro-title">{{ page.title }}</h1>
     <h2 class="intro-subtitle">{{ page.subtitle }}</h2>
+    
+    <!-- Câu đối trong intro -->
+    <div class="intro-couplets">
+      <div class="intro-parallel-couplet intro-left-couplet">
+        <div class="intro-couplet-text">
+          <p class="chinese">{{ page.left_couplet_chinese }}</p>
+        </div>
+      </div>
+
+      <div class="intro-parallel-couplet intro-right-couplet">
+        <div class="intro-couplet-text">
+          <p class="chinese">{{ page.right_couplet_chinese }}</p>
+        </div>
+      </div>
+    </div>
+
     <div class="intro-incense">
       <div class="intro-incense-stick"></div>
       <div class="intro-incense-stick"></div>
@@ -31,19 +47,6 @@
         <span class="vietnamese-text">{{ page.title }}</span>
       </div>
       <div class="tablet-decoration"></div>
-    </div>
-
-    <!-- Câu đối hai bên - chỉ giữ chữ Hán -->
-    <div class="parallel-couplet left-couplet">
-      <div class="couplet-text">
-        <p class="chinese">{{ page.left_couplet_chinese }}</p>
-      </div>
-    </div>
-
-    <div class="parallel-couplet right-couplet">
-      <div class="couplet-text">
-        <p class="chinese">{{ page.right_couplet_chinese }}</p>
-      </div>
     </div>
 
     <!-- Bàn thờ chính -->
@@ -346,7 +349,6 @@
       const introOverlay = document.getElementById('introOverlay');
       const enterButton = document.getElementById('enterButton');
       const ancestralAltar = document.getElementById('ancestralAltar');
-      const toggleMusicBtn = document.getElementById('toggleMusic');
       
       enterButton.addEventListener('click', function() {
         // Hiệu ứng fade out cho intro
