--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -12,42 +12,49 @@
 <body>
   <!-- Intro Animation -->
   <div id="introOverlay" class="intro-overlay">
-    <h1 class="intro-title">{{ page.title }}</h1>
-    <h2 class="intro-subtitle">{{ page.subtitle }}</h2>
-    
-    <!-- Câu đối trong intro -->
-    <div class="intro-couplets">
-      <div class="intro-parallel-couplet intro-left-couplet">
-        <div class="intro-couplet-text">
-          <p class="chinese">{{ page.left_couplet_chinese }}</p>
+    <div class="intro-content">
+      <!-- Hoành phi phía trên -->
+      <div class="horizontal-tablet">
+        <div class="tablet-content">
+          <span class="chinese-text">{{ page.subtitle }}</span>
+          <span class="vietnamese-text">{{ page.title }}</span>
+        </div>
+        <div class="tablet-decoration"></div>
+      </div>
+      <!-- Câu đối hai bên -->
+      <div class="intro-couplets">
+        <div class="intro-couplet intro-left">
+          <div class="intro-couplet-inner">
+            <div class="intro-couplet-text">
+              <p class="chinese">{{ page.left_couplet_chinese }}</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="intro-couplet intro-right">
+          <div class="intro-couplet-inner">
+            <div class="intro-couplet-text">
+              <p class="chinese">{{ page.right_couplet_chinese }}</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="intro-parallel-couplet intro-right-couplet">
-        <div class="intro-couplet-text">
-          <p class="chinese">{{ page.right_couplet_chinese }}</p>
+      <!-- Phần dưới với hương và nút -->
+      <div class="intro-bottom">
+        <div class="intro-incense">
+          <div class="intro-incense-stick"></div>
+          <div class="intro-incense-stick"></div>
+          <div class="intro-incense-stick"></div>
         </div>
+        <button id="enterButton" class="intro-button">Xem Gia Phả</button>
       </div>
     </div>
-
-    <div class="intro-incense">
-      <div class="intro-incense-stick"></div>
-      <div class="intro-incense-stick"></div>
-      <div class="intro-incense-stick"></div>
-    </div>
-    <button id="enterButton" class="intro-button">Xem Gia Phả</button>
   </div>
 
   <!-- Khung từ đường với hoành phi và câu đối -->
   <div id="ancestralAltar" class="ancestral-altar">
-    <!-- Hoành phi phía trên -->
-    <div class="horizontal-tablet">
-      <div class="tablet-content">
-        <span class="chinese-text">{{ page.subtitle }}</span>
-        <span class="vietnamese-text">{{ page.title }}</span>
-      </div>
-      <div class="tablet-decoration"></div>
-    </div>
+
 
     <!-- Bàn thờ chính -->
     <div class="main-altar">
@@ -71,6 +78,8 @@
           </div>
       </div>
     </div>
+  </div>
+
   <script>
     {% assign data_file = page.data_file | default: "family_tree_mother" %}
     const initialFamilyData = {{ site.data[data_file] | jsonify }};
