change layout to left

--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -376,7 +376,7 @@
         
         // Xác định orientation dựa trên thiết bị
         var orientation;
-        if (isMobileDevice()) {
+        if (isMobileDevice() || true) {
           orientation = FamilyTree.orientation.left;  // Điện thoại
           console.log("Đang sử dụng orientation cho điện thoại: left");
         } else {
